tarpc/tests/compile_fail/tarpc_service_fn_serve.stderr
error: method name conflicts with generated fn `World::serve`
 --> $DIR/tarpc_service_fn_serve.rs:6:14
  |
6 |     async fn serve();
  |              ^^^^^
